Bug 458975 - Cannot open Plasma Renderer KCM via icon added to desktop
Summary: Cannot open Plasma Renderer KCM via icon added to desktop
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR minor
Target Milestone: 1.0
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-10 20:39 UTC by Patrick Silva
Modified: 2022-09-13 19:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (88.90 KB, image/png)
2022-09-10 20:39 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-09-10 20:39:14 UTC
Created attachment 151970 [details]
screenshot

STEPS TO REPRODUCE
1. open kickoff
2. search for 'plasma renderer'
3. right-click on 'plasma renderer' search result and choose 'Add to desktop'
4. try to open Plasma Renderer KCM via icon created on desktop

OBSERVED RESULT
weird System Settings seen in the attached screenshot opens

EXPECTED RESULT
Plasma Renderer KCM opens

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-09-13 18:30:52 UTC
This is because the KCM's desktop file has both:

> Exec=systemsettings kcm_qtquicksettings
and

> NoDisplay=true
...which are mutually incompatible.

The exec line should say
> Exec=kcmshell5 kcm_qtquicksettings

However it looks like this desktop file is autogenerated using JSON metadata, and adding `"Exec": "kcmshell5 kcm_qtquicksettings"` to it doesn't seem to work. CCing Alexander.
Comment 2 Bug Janitor Service 2022-09-13 19:15:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kcmutils/-/merge_requests/103
Comment 3 Alexander Lohnau 2022-09-13 19:33:23 UTC
Git commit 92583346fe6485a2e55369123aaa7bed94b45d1f by Alexander Lohnau.
Committed on 13/09/2022 at 19:13.
Pushed by alex into branch 'master'.

Launch KCMs that are not part of systemsettings in kcmshell5

M  +6    -1    tools/kcmmetadatagenerator.cpp

https://invent.kde.org/frameworks/kcmutils/commit/92583346fe6485a2e55369123aaa7bed94b45d1f