Launch KCMs that are not part of systemsettings in kcmshell5

BUG: 458975